# frontier-wasm

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
assets/: counter-component.wasm
crates/counter-component/: Cargo.toml  build.rs
crates/counter-component/src/: bindings.rs  lib.rs
crates/frontier-wasm-host/: Cargo.toml  build.rs
crates/frontier-wasm-host/src/: app.rs  component.rs  graphics.rs  host.rs  lib.rs  main.rs  model.rs  runtime.rs
crates/frontier-wasm-host/tests/: counter_e2e.rs
docs/: orca-learnings.md
notes/: demo-checklist.md
plans/: plan.md
scripts/: ci.sh  ensure-cargo-component.sh  write_dist_bundle.py
wit/vello/: canvas.wit
